# TsumikiMiniwaBot

./: .replit  config.py  keep_alive.py  main.py  pyproject.toml
cogs/: __init__.py
cogs/Karuta/: plugin.py  subcommands.py
cogs/Test/: plugin.py
cogs/Utility/: paginator.py  plugin.py
core/: bot.py  embed.py
database/: mongo.py
