[tool.poetry]
name = "repl_nix_TsumikiMiniwaBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
typing-extensions = "^4.5.0"
discord = "^2.2.2"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
